[TEST] Use non-deprecated _key instead of _term for aggregation ordering
Otherwise the console doc tests fail due to the unexpected warning header

Original commit: elastic/x-pack-elasticsearch@598a191784151d1e90965d4ea42a1e47469ff3f5

--- a/docs/en/watcher/example-watches/example-watch-meetupdata.asciidoc
+++ b/docs/en/watcher/example-watches/example-watch-meetupdata.asciidoc
@@ -114,7 +114,7 @@ To set up the watch:
                         "field": "@timestamp", <5>
                         "size": 1,
                         "order": {
-                          "_term": "desc"
+                          "_key": "desc"
                         }
                       },
                       "aggs": {
@@ -226,7 +226,7 @@ PUT _xpack/watcher/watch/meetup
                         "field": "@timestamp",
                         "size": 1,
                         "order": {
-                          "_term": "desc"
+                          "_key": "desc"
                         }
                       },
                       "aggs": {
