--- a/docs/en/security/authorization.asciidoc
+++ b/docs/en/security/authorization.asciidoc
@@ -68,8 +68,9 @@ must be defined in a separate role.
 
 [[built-in-roles-kibana-system]]
 `kibana_system` ::
-Grants access necessary for the Kibana system user to read from and write to the
-Kibana indices and check the availability of the Elasticsearch cluster.
+Grants access necessary for the <<kibana, Kibana system user>>
+to read from and write to the Kibana indices and check the availability of the
+Elasticsearch cluster.
 +
 NOTE: This role should not be assigned to users as the granted permissions may
 change between releases.
@@ -81,10 +82,14 @@ access to the Kibana indices and grants  monitoring privileges for the cluster.
 
 [[built-in-roles-logstash-system]]
 `logstash_system` ::
-Grants access necessary for the Logstash system user to send data to Elasticsearch.
+Grants access necessary for the <<ls-monitoring-user, Logstash system user>>
+to send system-level data (such as monitoring) to Elasticsearch.
 +
 NOTE: This role should not be assigned to users as the granted permissions may
 change between releases.
++
+NOTE: This role does not provide access to the logstash indices and is not
+suitable for use within a Logstash pipeline.
 
 [[built-in-roles-ml-admin]]
 `machine_learning_admin`::
