Outstanding docs for 5.4 changes  (elastic/x-pack-elasticsearch#1280)
Docs for security features in 5.4

- `has_privileges` API
-  ldap metadata.

Original commit: elastic/x-pack-elasticsearch@22c733c8145293ab095b728cba8038624fe6c7a9

--- a/docs/en/rest-api/security/authenticate.asciidoc
+++ b/docs/en/rest-api/security/authenticate.asciidoc
@@ -14,7 +14,7 @@ GET _xpack/security/_authenticate
 // CONSOLE
 
 A successful call returns a JSON structure that shows what roles are assigned
-to the user.
+to the user as well as any assigned metadata.
 
 [source,js]
 --------------------------------------------------
@@ -23,6 +23,9 @@ to the user.
   "roles": [
     "admin",
     "kibana4"
-  ]
+  ],
+  "metadata" : {
+    "employee_id": "8675309"
+  }
 }
 --------------------------------------------------
