--- a/docs/en/rest-api/security.asciidoc
+++ b/docs/en/rest-api/security.asciidoc
@@ -5,6 +5,7 @@
 * <<security-api-clear-cache>>
 * <<security-api-users>>
 * <<security-api-roles>>
+* <<security-api-privileges>>
 * <<security-api-tokens>>
 
 include::security/authenticate.asciidoc[]
@@ -12,4 +13,5 @@ include::security/change-password.asciidoc[]
 include::security/clear-cache.asciidoc[]
 include::security/users.asciidoc[]
 include::security/roles.asciidoc[]
+include::security/privileges.asciidoc[]
 include::security/tokens.asciidoc[]
