--- a/docs/en/rest-api/ml/put-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/put-datafeed.asciidoc
@@ -36,11 +36,11 @@ You must create a job before you create a {dfeed}.  You can associate only one
   (time units) The interval at which scheduled queries are made while the {dfeed}
   runs in real time. The default value is either the bucket span for short
   bucket spans, or, for longer bucket spans, a sensible fraction of the bucket
-  span. For example: "150s".
+  span. For example: `150s`.
 
 `indices` (required)::
-  (array) An array of index names. Wildcards are supported. For example: 
-  ["it_ops_metrics", "server*"].
+  (array) An array of index names. Wildcards are supported. For example:
+  `["it_ops_metrics", "server*"]`.
 
 `job_id` (required)::
  (string) A numerical character string that uniquely identifies the job.
@@ -57,13 +57,21 @@ You must create a job before you create a {dfeed}.  You can associate only one
   example, if data from 10:04 a.m. might not be searchable in {es} until
   10:06 a.m., set this property to 120 seconds. The default value is `60s`.
 
+`script_fields`::
+  (object) Specifies scripts that evaluate custom expressions and returns
+  script fields to the {dfeed}.
+  The <<ml-detectorconfig,detector configuration objects>> in a job can contain
+  functions that use these script fields. 
+  For more information,
+  see {ref}/search-request-script-fields.html[Script Fields].
+
 `scroll_size`::
   (unsigned integer) The `size` parameter that is used in {es} searches.
   The default value is `1000`.
 
 `types` (required)::
   (array) A list of types to search for within the specified indices.
-  For example: ["network","sql","kpi"].
+  For example: `["network","sql","kpi"]`.
 
 For more information about these properties,
 see <<ml-datafeed-resource>>.
